--- a/UML_Diagram_NLP.ipynb
+++ b/UML_Diagram_NLP.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -14,31 +14,180 @@
       },
       "outputs": [
         {
+          "data": {
+            "text/html": [
+              "<span class=\"tex2jax_ignore\"><svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" xml:lang=\"en\" id=\"12f972dd40094eb0abef07c6906c3e00-0\" class=\"displacy\" width=\"1975\" height=\"399.5\" direction=\"ltr\" style=\"max-width: none; height: 399.5px; color: #000000; background: #ffffff; font-family: Arial; direction: ltr\">\n",
+              "<text class=\"displacy-token\" fill=\"currentColor\" text-anchor=\"middle\" y=\"309.5\">\n",
+              "    <tspan class=\"displacy-word\" fill=\"currentColor\" x=\"50\">as</tspan>\n",
+              "    <tspan class=\"displacy-tag\" dy=\"2em\" fill=\"currentColor\" x=\"50\">ADP</tspan>\n",
+              "</text>\n",
+              "\n",
+              "<text class=\"displacy-token\" fill=\"currentColor\" text-anchor=\"middle\" y=\"309.5\">\n",
+              "    <tspan class=\"displacy-word\" fill=\"currentColor\" x=\"225\">a</tspan>\n",
+              "    <tspan class=\"displacy-tag\" dy=\"2em\" fill=\"currentColor\" x=\"225\">DET</tspan>\n",
+              "</text>\n",
+              "\n",
+              "<text class=\"displacy-token\" fill=\"currentColor\" text-anchor=\"middle\" y=\"309.5\">\n",
+              "    <tspan class=\"displacy-word\" fill=\"currentColor\" x=\"400\">customer,</tspan>\n",
+              "    <tspan class=\"displacy-tag\" dy=\"2em\" fill=\"currentColor\" x=\"400\">NOUN</tspan>\n",
+              "</text>\n",
+              "\n",
+              "<text class=\"displacy-token\" fill=\"currentColor\" text-anchor=\"middle\" y=\"309.5\">\n",
+              "    <tspan class=\"displacy-word\" fill=\"currentColor\" x=\"575\">I</tspan>\n",
+              "    <tspan class=\"displacy-tag\" dy=\"2em\" fill=\"currentColor\" x=\"575\">PRON</tspan>\n",
+              "</text>\n",
+              "\n",
+              "<text class=\"displacy-token\" fill=\"currentColor\" text-anchor=\"middle\" y=\"309.5\">\n",
+              "    <tspan class=\"displacy-word\" fill=\"currentColor\" x=\"750\">am</tspan>\n",
+              "    <tspan class=\"displacy-tag\" dy=\"2em\" fill=\"currentColor\" x=\"750\">AUX</tspan>\n",
+              "</text>\n",
+              "\n",
+              "<text class=\"displacy-token\" fill=\"currentColor\" text-anchor=\"middle\" y=\"309.5\">\n",
+              "    <tspan class=\"displacy-word\" fill=\"currentColor\" x=\"925\">able</tspan>\n",
+              "    <tspan class=\"displacy-tag\" dy=\"2em\" fill=\"currentColor\" x=\"925\">ADJ</tspan>\n",
+              "</text>\n",
+              "\n",
+              "<text class=\"displacy-token\" fill=\"currentColor\" text-anchor=\"middle\" y=\"309.5\">\n",
+              "    <tspan class=\"displacy-word\" fill=\"currentColor\" x=\"1100\">to</tspan>\n",
+              "    <tspan class=\"displacy-tag\" dy=\"2em\" fill=\"currentColor\" x=\"1100\">PART</tspan>\n",
+              "</text>\n",
+              "\n",
+              "<text class=\"displacy-token\" fill=\"currentColor\" text-anchor=\"middle\" y=\"309.5\">\n",
+              "    <tspan class=\"displacy-word\" fill=\"currentColor\" x=\"1275\">add</tspan>\n",
+              "    <tspan class=\"displacy-tag\" dy=\"2em\" fill=\"currentColor\" x=\"1275\">VERB</tspan>\n",
+              "</text>\n",
+              "\n",
+              "<text class=\"displacy-token\" fill=\"currentColor\" text-anchor=\"middle\" y=\"309.5\">\n",
+              "    <tspan class=\"displacy-word\" fill=\"currentColor\" x=\"1450\">items</tspan>\n",
+              "    <tspan class=\"displacy-tag\" dy=\"2em\" fill=\"currentColor\" x=\"1450\">NOUN</tspan>\n",
+              "</text>\n",
+              "\n",
+              "<text class=\"displacy-token\" fill=\"currentColor\" text-anchor=\"middle\" y=\"309.5\">\n",
+              "    <tspan class=\"displacy-word\" fill=\"currentColor\" x=\"1625\">to</tspan>\n",
+              "    <tspan class=\"displacy-tag\" dy=\"2em\" fill=\"currentColor\" x=\"1625\">PART</tspan>\n",
+              "</text>\n",
+              "\n",
+              "<text class=\"displacy-token\" fill=\"currentColor\" text-anchor=\"middle\" y=\"309.5\">\n",
+              "    <tspan class=\"displacy-word\" fill=\"currentColor\" x=\"1800\">cart.</tspan>\n",
+              "    <tspan class=\"displacy-tag\" dy=\"2em\" fill=\"currentColor\" x=\"1800\">VERB</tspan>\n",
+              "</text>\n",
+              "\n",
+              "<g class=\"displacy-arrow\">\n",
+              "    <path class=\"displacy-arc\" id=\"arrow-12f972dd40094eb0abef07c6906c3e00-0-0\" stroke-width=\"2px\" d=\"M70,264.5 C70,2.0 750.0,2.0 750.0,264.5\" fill=\"none\" stroke=\"currentColor\"/>\n",
+              "    <text dy=\"1.25em\" style=\"font-size: 0.8em; letter-spacing: 1px\">\n",
+              "        <textPath xlink:href=\"#arrow-12f972dd40094eb0abef07c6906c3e00-0-0\" class=\"displacy-label\" startOffset=\"50%\" side=\"left\" fill=\"currentColor\" text-anchor=\"middle\">prep</textPath>\n",
+              "    </text>\n",
+              "    <path class=\"displacy-arrowhead\" d=\"M70,266.5 L62,254.5 78,254.5\" fill=\"currentColor\"/>\n",
+              "</g>\n",
+              "\n",
+              "<g class=\"displacy-arrow\">\n",
+              "    <path class=\"displacy-arc\" id=\"arrow-12f972dd40094eb0abef07c6906c3e00-0-1\" stroke-width=\"2px\" d=\"M245,264.5 C245,177.0 390.0,177.0 390.0,264.5\" fill=\"none\" stroke=\"currentColor\"/>\n",
+              "    <text dy=\"1.25em\" style=\"font-size: 0.8em; letter-spacing: 1px\">\n",
+              "        <textPath xlink:href=\"#arrow-12f972dd40094eb0abef07c6906c3e00-0-1\" class=\"displacy-label\" startOffset=\"50%\" side=\"left\" fill=\"currentColor\" text-anchor=\"middle\">det</textPath>\n",
+              "    </text>\n",
+              "    <path class=\"displacy-arrowhead\" d=\"M245,266.5 L237,254.5 253,254.5\" fill=\"currentColor\"/>\n",
+              "</g>\n",
+              "\n",
+              "<g class=\"displacy-arrow\">\n",
+              "    <path class=\"displacy-arc\" id=\"arrow-12f972dd40094eb0abef07c6906c3e00-0-2\" stroke-width=\"2px\" d=\"M70,264.5 C70,89.5 395.0,89.5 395.0,264.5\" fill=\"none\" stroke=\"currentColor\"/>\n",
+              "    <text dy=\"1.25em\" style=\"font-size: 0.8em; letter-spacing: 1px\">\n",
+              "        <textPath xlink:href=\"#arrow-12f972dd40094eb0abef07c6906c3e00-0-2\" class=\"displacy-label\" startOffset=\"50%\" side=\"left\" fill=\"currentColor\" text-anchor=\"middle\">pobj</textPath>\n",
+              "    </text>\n",
+              "    <path class=\"displacy-arrowhead\" d=\"M395.0,266.5 L403.0,254.5 387.0,254.5\" fill=\"currentColor\"/>\n",
+              "</g>\n",
+              "\n",
+              "<g class=\"displacy-arrow\">\n",
+              "    <path class=\"displacy-arc\" id=\"arrow-12f972dd40094eb0abef07c6906c3e00-0-3\" stroke-width=\"2px\" d=\"M595,264.5 C595,177.0 740.0,177.0 740.0,264.5\" fill=\"none\" stroke=\"currentColor\"/>\n",
+              "    <text dy=\"1.25em\" style=\"font-size: 0.8em; letter-spacing: 1px\">\n",
+              "        <textPath xlink:href=\"#arrow-12f972dd40094eb0abef07c6906c3e00-0-3\" class=\"displacy-label\" startOffset=\"50%\" side=\"left\" fill=\"currentColor\" text-anchor=\"middle\">nsubj</textPath>\n",
+              "    </text>\n",
+              "    <path class=\"displacy-arrowhead\" d=\"M595,266.5 L587,254.5 603,254.5\" fill=\"currentColor\"/>\n",
+              "</g>\n",
+              "\n",
+              "<g class=\"displacy-arrow\">\n",
+              "    <path class=\"displacy-arc\" id=\"arrow-12f972dd40094eb0abef07c6906c3e00-0-4\" stroke-width=\"2px\" d=\"M770,264.5 C770,177.0 915.0,177.0 915.0,264.5\" fill=\"none\" stroke=\"currentColor\"/>\n",
+              "    <text dy=\"1.25em\" style=\"font-size: 0.8em; letter-spacing: 1px\">\n",
+              "        <textPath xlink:href=\"#arrow-12f972dd40094eb0abef07c6906c3e00-0-4\" class=\"displacy-label\" startOffset=\"50%\" side=\"left\" fill=\"currentColor\" text-anchor=\"middle\">acomp</textPath>\n",
+              "    </text>\n",
+              "    <path class=\"displacy-arrowhead\" d=\"M915.0,266.5 L923.0,254.5 907.0,254.5\" fill=\"currentColor\"/>\n",
+              "</g>\n",
+              "\n",
+              "<g class=\"displacy-arrow\">\n",
+              "    <path class=\"displacy-arc\" id=\"arrow-12f972dd40094eb0abef07c6906c3e00-0-5\" stroke-width=\"2px\" d=\"M1120,264.5 C1120,177.0 1265.0,177.0 1265.0,264.5\" fill=\"none\" stroke=\"currentColor\"/>\n",
+              "    <text dy=\"1.25em\" style=\"font-size: 0.8em; letter-spacing: 1px\">\n",
+              "        <textPath xlink:href=\"#arrow-12f972dd40094eb0abef07c6906c3e00-0-5\" class=\"displacy-label\" startOffset=\"50%\" side=\"left\" fill=\"currentColor\" text-anchor=\"middle\">aux</textPath>\n",
+              "    </text>\n",
+              "    <path class=\"displacy-arrowhead\" d=\"M1120,266.5 L1112,254.5 1128,254.5\" fill=\"currentColor\"/>\n",
+              "</g>\n",
+              "\n",
+              "<g class=\"displacy-arrow\">\n",
+              "    <path class=\"displacy-arc\" id=\"arrow-12f972dd40094eb0abef07c6906c3e00-0-6\" stroke-width=\"2px\" d=\"M945,264.5 C945,89.5 1270.0,89.5 1270.0,264.5\" fill=\"none\" stroke=\"currentColor\"/>\n",
+              "    <text dy=\"1.25em\" style=\"font-size: 0.8em; letter-spacing: 1px\">\n",
+              "        <textPath xlink:href=\"#arrow-12f972dd40094eb0abef07c6906c3e00-0-6\" class=\"displacy-label\" startOffset=\"50%\" side=\"left\" fill=\"currentColor\" text-anchor=\"middle\">xcomp</textPath>\n",
+              "    </text>\n",
+              "    <path class=\"displacy-arrowhead\" d=\"M1270.0,266.5 L1278.0,254.5 1262.0,254.5\" fill=\"currentColor\"/>\n",
+              "</g>\n",
+              "\n",
+              "<g class=\"displacy-arrow\">\n",
+              "    <path class=\"displacy-arc\" id=\"arrow-12f972dd40094eb0abef07c6906c3e00-0-7\" stroke-width=\"2px\" d=\"M1295,264.5 C1295,177.0 1440.0,177.0 1440.0,264.5\" fill=\"none\" stroke=\"currentColor\"/>\n",
+              "    <text dy=\"1.25em\" style=\"font-size: 0.8em; letter-spacing: 1px\">\n",
+              "        <textPath xlink:href=\"#arrow-12f972dd40094eb0abef07c6906c3e00-0-7\" class=\"displacy-label\" startOffset=\"50%\" side=\"left\" fill=\"currentColor\" text-anchor=\"middle\">dobj</textPath>\n",
+              "    </text>\n",
+              "    <path class=\"displacy-arrowhead\" d=\"M1440.0,266.5 L1448.0,254.5 1432.0,254.5\" fill=\"currentColor\"/>\n",
+              "</g>\n",
+              "\n",
+              "<g class=\"displacy-arrow\">\n",
+              "    <path class=\"displacy-arc\" id=\"arrow-12f972dd40094eb0abef07c6906c3e00-0-8\" stroke-width=\"2px\" d=\"M1645,264.5 C1645,177.0 1790.0,177.0 1790.0,264.5\" fill=\"none\" stroke=\"currentColor\"/>\n",
+              "    <text dy=\"1.25em\" style=\"font-size: 0.8em; letter-spacing: 1px\">\n",
+              "        <textPath xlink:href=\"#arrow-12f972dd40094eb0abef07c6906c3e00-0-8\" class=\"displacy-label\" startOffset=\"50%\" side=\"left\" fill=\"currentColor\" text-anchor=\"middle\">aux</textPath>\n",
+              "    </text>\n",
+              "    <path class=\"displacy-arrowhead\" d=\"M1645,266.5 L1637,254.5 1653,254.5\" fill=\"currentColor\"/>\n",
+              "</g>\n",
+              "\n",
+              "<g class=\"displacy-arrow\">\n",
+              "    <path class=\"displacy-arc\" id=\"arrow-12f972dd40094eb0abef07c6906c3e00-0-9\" stroke-width=\"2px\" d=\"M1470,264.5 C1470,89.5 1795.0,89.5 1795.0,264.5\" fill=\"none\" stroke=\"currentColor\"/>\n",
+              "    <text dy=\"1.25em\" style=\"font-size: 0.8em; letter-spacing: 1px\">\n",
+              "        <textPath xlink:href=\"#arrow-12f972dd40094eb0abef07c6906c3e00-0-9\" class=\"displacy-label\" startOffset=\"50%\" side=\"left\" fill=\"currentColor\" text-anchor=\"middle\">acl</textPath>\n",
+              "    </text>\n",
+              "    <path class=\"displacy-arrowhead\" d=\"M1795.0,266.5 L1803.0,254.5 1787.0,254.5\" fill=\"currentColor\"/>\n",
+              "</g>\n",
+              "</svg></span>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "The ... det\n",
-            "22 ... nummod\n",
-            "- ... punct\n",
-            "year ... npadvmod\n",
-            "- ... punct\n",
-            "old ... amod\n",
-            "Student ... nsubj\n",
-            "recently ... advmod\n",
-            "won ... ROOT\n",
-            "ATP ... compound\n",
-            "Challenger ... compound\n",
-            "tournament ... dobj\n",
+            "as ... prep\n",
+            "a ... det\n",
+            "customer ... pobj\n",
+            ", ... punct\n",
+            "I ... nsubj\n",
+            "am ... ROOT\n",
+            "able ... acomp\n",
+            "to ... aux\n",
+            "add ... xcomp\n",
+            "items ... dobj\n",
+            "to ... aux\n",
+            "cart ... acl\n",
             ". ... punct\n"
           ]
         }
       ],
       "source": [
         "import spacy\n",
+        "from spacy import displacy\n",
         "nlp = spacy.load('en_core_web_sm')\n",
         "\n",
-        "doc = nlp(\"The 22-year-old Student recently won ATP Challenger tournament.\")\n",
+        "doc = nlp(\"as a customer, I am able to add items to cart.\")\n",
         "\n",
+        "displacy.render(doc, style=\"dep\", jupyter=True)\n",
         "for tok in doc:\n",
         "  print(tok.text, \"...\", tok.dep_)"
       ]
